--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="m">
-        <activity android:name=".Views.CashBank"/>
+        <activity android:name=".Views.OutStandingArea" />
+        <activity android:name=".Views.CashBank" />
         <activity android:name=".Views.HtmlReports" />
         <activity android:name=".Views.OutStanding" />
         <activity android:name=".Views.StockSummary" />
