--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
@@ -30,6 +31,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-database:19.7.0'
     def lifecycle_version = "2.2.0"
 
     implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
